--- a/TMLGen/Forms/MainForm.resx
+++ b/TMLGen/Forms/MainForm.resx
@@ -120,6 +120,26 @@
   <metadata name="openFileDialogSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1034, 21</value>
+  </metadata>
+  <data name="textBoxSource.ToolTip" xml:space="preserve">
+    <value>The source file of the timeline whose TML you want to generate. It is likely located in a package's Timeline\Generated directory.
+Example: F:\BG3Multitool\UnpackedData\Gustav\Public\GustavDev\Timeline\Generated\CAMP_DaisyAcknowledgement_AvD_ROM.lsf</value>
+  </data>
+  <data name="textBoxGDT.ToolTip" xml:space="preserve">
+    <value>Contains information linking the timeline and dialog. It is likely located in a package's Content\Generated\[PAK]_GeneratedDialogTimelines folder.
+Example: F:\BG3Multitool\UnpackedData\Gustav\Public\GustavDev\Content\Generated\[PAK]_GeneratedDialogTimelines\_merged.lsf</value>
+  </data>
+  <data name="textBoxDB.ToolTip" xml:space="preserve">
+    <value>The compiled dialog file for the timeline. It is likely located in a package's Story\DialogsBinary folder.
+Example: F:\BG3Multitool\UnpackedData\Gustav\Mods\GustavDev\Story\DialogsBinary\Camp\Campfire_Moments\CAMP_DaisyAcknowledgement_AvD_ROM.lsf</value>
+  </data>
+  <data name="textBoxTT.ToolTip" xml:space="preserve">
+    <value>The directory that contains the timeline's templates. 
+NOTE: Will be absent if a timeline has no templates.
+Example: F:\BG3Multitool\UnpackedData\Gustav\Public\GustavDev\TimelineTemplates\0e18fce2-99f6-75be-5404-1faee5d19471</value>
+  </data>
   <metadata name="openFileDialogGDT.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>186, 17</value>
   </metadata>
@@ -134,9 +154,6 @@
   </metadata>
   <metadata name="saveFileDialogOutput.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>867, 21</value>
-  </metadata>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>1034, 21</value>
   </metadata>
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>18, 54</value>
