--- a/TMLGen/Forms/MainForm.resx
+++ b/TMLGen/Forms/MainForm.resx
@@ -121,7 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>179, 67</value>
+    <value>326, 67</value>
   </metadata>
   <data name="textBoxSource.ToolTip" xml:space="preserve">
     <value>The source file of the timeline whose TML you want to generate. It is likely located in a package's Timeline\Generated directory.
@@ -156,6 +156,10 @@ Example: F:\BG3Multitool\UnpackedData\Gustav\Public\GustavDev\TimelineTemplates\
     <value>The raw dialog file for the timeline. It is likely located in a package's Story\Dialogs folder.
 Example: F:\BG3Multitool\UnpackedData\Gustav\Mods\GustavDev\Story\Dialogs\Camp\Campfire_Moments\CAMP_DaisyAcknowledgement_AvD_ROM.lsj</value>
   </data>
+  <data name="textBoxBatch.ToolTip" xml:space="preserve">
+    <value>The source file of the timeline whose TML you want to generate. It is likely located in a package's Timeline\Generated directory.
+Example: F:\BG3Multitool\UnpackedData\Gustav\Public\GustavDev\Timeline\Generated\CAMP_DaisyAcknowledgement_AvD_ROM.lsf</value>
+  </data>
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>19, 60</value>
   </metadata>
@@ -164,6 +168,12 @@ Example: F:\BG3Multitool\UnpackedData\Gustav\Mods\GustavDev\Story\Dialogs\Camp\C
   </metadata>
   <metadata name="openFileDialogD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>480, 16</value>
+  </metadata>
+  <metadata name="folderBrowserDialogBatchSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1217, 21</value>
+  </metadata>
+  <metadata name="backgroundWorker2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>173, 64</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>140</value>
