--- a/TMLGen/Properties/Resources.resx
+++ b/TMLGen/Properties/Resources.resx
@@ -267,4 +267,10 @@
   <data name="SourceFileDoesNotExistBatch" xml:space="preserve">
     <value>A source file that was part of the batch could not be found: {0}</value>
   </data>
+  <data name="GenerationCanceled" xml:space="preserve">
+    <value>Generation canceled.</value>
+  </data>
+  <data name="GenerationCanceling" xml:space="preserve">
+    <value>Canceling generation...</value>
+  </data>
 </root>
