--- a/TMLGen/Properties/Resources.resx
+++ b/TMLGen/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BatchInputDoesNotExist" xml:space="preserve">
-    <value>Could not find batch input directory.</value>
+    <value>Failed to locate batch input directory.</value>
   </data>
   <data name="VisualCacheCreationError" xml:space="preserve">
     <value>An error occurred creating the visual files cache.</value>
