--- a/TMLGen/Properties/Resources.resx
+++ b/TMLGen/Properties/Resources.resx
@@ -285,4 +285,7 @@
   <data name="SpeakerMissingDBEntry" xml:space="preserve">
     <value>One or more speakers in {0} are missing a dialogs binary entry. This can happen if the input files are incorrect or if the timeline data does not properly reflect the dialog data.</value>
   </data>
+  <data name="ReferenceFlagPathDoesNotExist" xml:space="preserve">
+    <value>Flag data does not exist. The reference file(s) might be incorrect without it. Unpack Shared.pak, SharedDev.pak, Gustav.pak, and GustavDev.pak to fix this. Alternatively, refresh the timeline(s) in the editor.</value>
+  </data>
 </root>
