added rtf escaping, exceptions that can't be logged are written to console

--- a/TMLGen/Properties/Resources.resx
+++ b/TMLGen/Properties/Resources.resx
@@ -169,7 +169,7 @@
     <value>Generated dialog timelines file missing dialog resource ID. Is this file correct?</value>
   </data>
   <data name="GenerationError" xml:space="preserve">
-    <value>An error occurred during generation.</value>
+    <value>An exception occurred during generation.</value>
   </data>
   <data name="GenerationFailed" xml:space="preserve">
     <value>Generation failed.</value>
@@ -280,12 +280,18 @@
     <value>Failed to prepare dialogs file for {0}. The reference file (_ref.json) cannot be generated.</value>
   </data>
   <data name="GenerationErrorBatch" xml:space="preserve">
-    <value>An error occurred during generation of {0}</value>
+    <value>An exception occurred during generation of {0}</value>
   </data>
   <data name="SpeakerMissingDBEntry" xml:space="preserve">
     <value>One or more speakers in {0} are missing a dialogs binary entry. This can happen if the input files are incorrect or if the timeline data does not properly reflect the dialog data.</value>
   </data>
   <data name="ReferenceFlagPathDoesNotExist" xml:space="preserve">
     <value>Flag data does not exist. The reference file(s) might be incorrect without it. Unpack Shared.pak, SharedDev.pak, Gustav.pak, and GustavDev.pak to fix this. Alternatively, refresh the timeline(s) in the editor.</value>
+  </data>
+  <data name="LoggingExceptionError" xml:space="preserve">
+    <value>The following exception could not be logged. {0}</value>
+  </data>
+  <data name="GenerationErrorNoException" xml:space="preserve">
+    <value>An error occurred during generation.</value>
   </data>
 </root>
